# ChatGptBot

./: .gitignore  Makefile  README.md  pyproject.toml
chat_gpt/config/: __init__.py  initial_initialization.py  settings.py
chat_gpt/core/base/: use_case.py
chat_gpt/core/dto/: __init__.py  admin.py  chat_gpt.py  user.py  user_context.py
chat_gpt/core/entities/: __init__.py  user.py  user_context.py
chat_gpt/core/exceptions/: __init__.py  gateway.py  user.py  user_contex.py
chat_gpt/core/protocols/: __init__.py  chat_gpt.py
chat_gpt/core/protocols/gateways/: __init__.py  commiter.py  user.py  user_context.py
chat_gpt/core/protocols/views/: __init__.py  admin.py  shared.py  user.py
chat_gpt/core/services/: __init__.py  user.py  user_context.py
chat_gpt/core/use_cases/: __init__.py  send_query.py
chat_gpt/core/use_cases/admin/: __init__.py  create.py  delete.py
chat_gpt/core/use_cases/user/: __init__.py  create.py  get_by_filters.py  get_one_by_filters.py  give_access.py  remove_access.py  reset_limit_requests.py
chat_gpt/core/use_cases/user_context/: __init__.py  cleare.py  cleare_all.py  create.py  delete.py  get_by_filters.py  get_one_by_filters.py  update.py
chat_gpt/infrastructure/: chat_gpt.py
chat_gpt/infrastructure/storage/sqlalchemy/: __init__.py  factories.py
chat_gpt/presentation/bot/: __main__.py  commands.py  states.py
chat_gpt/presentation/bot/di/: builds.py
chat_gpt/presentation/di/: __init__.py  container.py  ioc.py
deploy/: .env.prod.example  Dockerfile  alembic.ini  dev.docker-compose.yml  docker-compose.yml
(+57 files in other folders)
