[tool.poetry]
name = "chatgpt"
version = "0.1.0"
description = ""
authors = ["mihey <daniil53891@yandex.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.8"
ftransc = "^7.0.3"
speechrecognition = "^3.10.0"
replicate = "^0.8.4"
sqlalchemy = "^2.0.18"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
aiogram-dialog = "2.0.0b18"
aiogram = "3.0.0b7"
coloredlogs = "^15.0.1"
redis = "^4.6.0"
di = {extras = ["anyio"], version = "^0.75.3"}


[tool.poetry.group.linter.dependencies]
mypy = "^1.2.0"
flake8 = "^6.0.0"
flake8-print = "^5.0.0"
flake8-pyproject = "^1.2.3"
black = "^23.3.0"

[tool.black]
line-length = 79

[tool.flake8]
exclude = ['.git','__pycache__', '.env', 'venv', 'alembic',]
max-line-length = 79
max-complexivity = 8


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
